# kintone-python

./: .gitignore  LICENSE  README.md  pyproject.toml
kintone/: __init__.py  client.py  http_request.py  kintone_api.py  query.py
kintone/commands/: app.py  apps.py  form.py  record.py  records.py  space.py
tests/: test_http_request.py  test_kintone_api.py  test_query.py
tests/commands/: test_app.py  test_record.py  test_records.py  test_space.py
