[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kintone"
version = "0.0.1"
description = "Kintone API client for Python"
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
jupyter = "^1.0.0"
